# c-code-challenges

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: auto-tester.yml
infra/: README.md
infra/runner/: Dockerfile
lib/: CMakeLists.txt  iohelper.c  iohelper.h  quicksort.c  quicksort.h  util.c  util.h
scripts/: dockero.ps1  dockero.sh  gen-challenge-boilerplate.sh  prcheck.py
src/: CMakeLists.txt  main.c
src/anagram/: CMakeLists.txt  anagram.c  anagram.h  anagram.tracker  anagram_1.dict  anagram_2.dict  solver1.c  solver1.h
src/wordinversion/: CMakeLists.txt  solver1.c  solver1.h  solver2.c  solver2.h  solver3.c  solver3.h  wordinversion.c  wordinversion.h  wordinversion.tracker
